# stack-profile-embed-string

./: stack.yaml
simple/: simple.cabal
simple/app/: Main.hs
simple/src/: EmbedString.hs
