name:                simple
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/philderbeast/stack-profile-embed-string
license:             BSD3
license-file:        LICENSE
author:              Phil de Joux
maintainer:          philderbeast@gmail.com
copyright:           2017 Phil de Joux
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     EmbedString
  build-depends:       base
                     , template-haskell
  default-language:    Haskell2010

executable simple-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , simple
                     , raw-strings-qq
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/philderbeast/stack-profile-embed-string
